<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@drawable/ic_arrow_back"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_create_shift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_shift"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/save"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/start_date_view"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/start_date_hint"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/padding_40dp"
        app:layout_constraintTop_toBottomOf="@id/btn_save"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/start_date_view"
        app:layout_constraintStart_toEndOf="@id/start_date_view"
        app:layout_constraintBottom_toBottomOf="@id/start_date_view"
        android:text="@string/add_start_date"
        android:textAllCaps="false"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/end_date_view"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/date_field_width"
        android:layout_height="wrap_content"
        android:hint="@string/end_date_hint"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/padding_40dp"
        app:layout_constraintTop_toBottomOf="@id/start_date_view"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/end_date_view"
        app:layout_constraintStart_toEndOf="@id/end_date_view"
        app:layout_constraintBottom_toBottomOf="@id/end_date_view"
        android:text="@string/add_end_date"
        android:textAllCaps="false"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/employee_options"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/employee"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/padding_40dp"
        app:layout_constraintTop_toBottomOf="@id/end_date_view"
        >
        <AutoCompleteTextView
            android:id="@+id/ac_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/role_options"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/role"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/employee_options"
        android:layout_marginTop="@dimen/padding_40dp"
        >
        <AutoCompleteTextView
            android:id="@+id/ac_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/color_options"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/color"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/role_options"
        android:layout_marginTop="@dimen/padding_40dp"
        >
        <AutoCompleteTextView
            android:id="@+id/ac_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>